2004-02-20 Vangelis Rokas <vrokas AT otenet.gr>
	   Hans-Juergen Dorn <hans.dorn AT apl-landau.de>

	* doc/sdccman.lyx: removed PIC16 from PIC16 Port Specific Options,
	removed -penable-stack, added comment for stack pragma, added
	warning for not initializing the stack/frame registers, removed
	comment at interrupts section

	Stack is made permanent, there is no ability to disable stack usage.
	* src/pic16/device.h,
	* src/pic16/device.c: removed all references to USE_STACK macro,
	* src/pic16/device.c (pic16_dump_section): when no elements in
	rlist, free rlist before return,
	* (pic16_dump_int_registers): NEW, internal registers are a new set
	of general purpose registers reused by each function,
	* (checkAddReg): returns 1 if registers is added to set,
	* (pic16_groupRegistersInSection): when a registers is of type
	PO_GPR_TEMP add it in pic16_int_regs and not in pic16_rel_udata,
	* src/pic16/device.h: memRange and Assigned Memory are deleted,
	SRCASECMP macro is moved here from device.c
	* src/pic16/genarith.c (pic16_pCodeOpType): added cases for
	PO_PCLATU, PO_PRODL, PO_PRODH,
	* (pic16_pCodeOpType, genMinus, 
	changed compares to "a" register, with AOP_ACC,
	* (pic16_genPlus): fixed some bugs and indented properly,
	* (pic16_addSign): changed size to size+offset in the MOVWF
	instruction,
	* (pic16_genUMult8XLit_8): NEW, uses processor MULLW instruction to
	multiply 8-bit operand by literal, result is 8-bit,
	* (pic16_genUMult8X8_8): NEW, uses processor MULWF instruction to
	multiply 2 8-bit operand, result is 8-bit,
	* (pic16_genMult8X8_8): modified to call genUMult8X*_8 functions and not
	genUMult8X*_16,
	* src/pic16/gen.c: changed accUse to contain WREG only,
	* (pic16_emitcomment): renamed to pic16_emitpcomment,
	* (aopForSym): allocated dir register when IN_DIRSPACE(space) is,
	true, do not use immediate addressing any more unless sym is a
	pointer in codespace,
	* (aopForRemat): do not use immediate addressing when symbol not in